--- a/manifest.yaml
+++ b/manifest.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: abc-tech-container
-          image: rushlfc/abc_techimage:latest
+          image: rushlfc/abc_techimage:$BUILD_NUMBER
           ports:
             - containerPort: 8080
 ---
